fix(app): Fix wrong Card button sizing and stuck robot list highlight

--- a/components/src/structure/structure.css
+++ b/components/src/structure/structure.css
@@ -110,10 +110,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  & > button {
-    height: 3rem;
-  }
 }
 
 .card_column {
